tests/snapshots/examples@apcupsd_examples__newbackupspro2.status.snap
---
source: src/main.rs
expression: render_metrics(test_data)?
---
# HELP apcupsd_info Metadata for apcupsd.
# TYPE apcupsd_info gauge
apcupsd_info{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412",hostname="good-machine",cable="APC Cable 940-0095A",ups_mode="Net Master",sharenet_name="NetworkUPS",sensitivity="High",alarm_delay="Low Battery",last_transfer_reason="No transfers since turnon",last_self_test_result="NO",self_test_interval="OFF",manufacture_date="07/25/98",firmware_version="11.2.I"} 1
# HELP apcupsd_last_update_timestamp_seconds Date and time of last update from UPS.
# TYPE apcupsd_last_update_timestamp_seconds gauge
apcupsd_last_update_timestamp_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 969546043
# HELP apcupsd_line_volts Current input line voltage.
# TYPE apcupsd_line_volts gauge
apcupsd_line_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 243.3
# HELP apcupsd_ups_load_percent Percentage of UPS load capacity used.
# TYPE apcupsd_ups_load_percent gauge
apcupsd_ups_load_percent{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0.41600000000000004
# HELP apcupsd_battery_charge_percent Current battery capacity charge percentage.
# TYPE apcupsd_battery_charge_percent gauge
apcupsd_battery_charge_percent{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 1
# HELP apcupsd_battery_time_left_seconds Remaining runtime left on battery as estimated by the UPS.
# TYPE apcupsd_battery_time_left_seconds gauge
apcupsd_battery_time_left_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 720
# HELP apcupsd_battery_charge_required_for_shutdown_percent Min battery charge % (BCHARGE) required for system shutdown.
# TYPE apcupsd_battery_charge_required_for_shutdown_percent gauge
apcupsd_battery_charge_required_for_shutdown_percent{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0.05
# HELP apcupsd_battery_runtime_required_for_shutdown_seconds Min battery runtime required for system shutdown.
# TYPE apcupsd_battery_runtime_required_for_shutdown_seconds gauge
apcupsd_battery_runtime_required_for_shutdown_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 360
# HELP apcupsd_battery_runtime_trigger_shutdown_seconds Max battery runtime after which system is shutdown.
# TYPE apcupsd_battery_runtime_trigger_shutdown_seconds gauge
apcupsd_battery_runtime_trigger_shutdown_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_max_since_startup_volts Maximum input line voltage since apcupsd startup.
# TYPE apcupsd_max_since_startup_volts gauge
apcupsd_max_since_startup_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 246.2
# HELP apcupsd_min_since_startup_volts Minimum input line voltage since apcupsd startup.
# TYPE apcupsd_min_since_startup_volts gauge
apcupsd_min_since_startup_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 243.3
# HELP apcupsd_output_volts Current UPS output voltage.
# TYPE apcupsd_output_volts gauge
apcupsd_output_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 243.3
# HELP apcupsd_power_on_delay_seconds Time UPS waits after power off when the power is restored.
# TYPE apcupsd_power_on_delay_seconds gauge
apcupsd_power_on_delay_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 60
# HELP apcupsd_power_off_delay_seconds Delay before UPS powers down after command received.
# TYPE apcupsd_power_off_delay_seconds gauge
apcupsd_power_off_delay_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 180
# HELP apcupsd_battery_low_signal_time_left_seconds Low battery signal sent when this much runtime remains.
# TYPE apcupsd_battery_low_signal_time_left_seconds gauge
apcupsd_battery_low_signal_time_left_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 120
# HELP apcupsd_transfer_low_volts Input line voltage below which UPS will switch to battery.
# TYPE apcupsd_transfer_low_volts gauge
apcupsd_transfer_low_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 208
# HELP apcupsd_transfer_high_volts Input line voltage above which UPS will switch to battery.
# TYPE apcupsd_transfer_high_volts gauge
apcupsd_transfer_high_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 253
# HELP apcupsd_power_on_required_charge_percent Battery charge % required after power off to restore power.
# TYPE apcupsd_power_on_required_charge_percent gauge
apcupsd_power_on_required_charge_percent{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0.5
# HELP apcupsd_battery_volts Current battery voltage.
# TYPE apcupsd_battery_volts gauge
apcupsd_battery_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 13.9
# HELP apcupsd_line_frequency_hertz Current line frequency in Hertz.
# TYPE apcupsd_line_frequency_hertz gauge
apcupsd_line_frequency_hertz{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 50
# HELP apcupsd_status_calibration Runtime calibration occurring.
# TYPE apcupsd_status_calibration gauge
apcupsd_status_calibration{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_trim SmartTrim.
# TYPE apcupsd_status_trim gauge
apcupsd_status_trim{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_boost SmartBoost.
# TYPE apcupsd_status_boost gauge
apcupsd_status_boost{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_on_line On line.
# TYPE apcupsd_status_on_line gauge
apcupsd_status_on_line{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 1
# HELP apcupsd_status_on_battery On battery.
# TYPE apcupsd_status_on_battery gauge
apcupsd_status_on_battery{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_overloaded_output Overloaded output.
# TYPE apcupsd_status_overloaded_output gauge
apcupsd_status_overloaded_output{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_battery_low Battery low.
# TYPE apcupsd_status_battery_low gauge
apcupsd_status_battery_low{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_replace_battery Replace battery.
# TYPE apcupsd_status_replace_battery gauge
apcupsd_status_replace_battery{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_communication_lost Communications with UPS lost.
# TYPE apcupsd_status_communication_lost gauge
apcupsd_status_communication_lost{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_shutdown_in_progress Shutdown in progress.
# TYPE apcupsd_status_shutdown_in_progress gauge
apcupsd_status_shutdown_in_progress{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_slave Set if this is a slave.
# TYPE apcupsd_status_slave gauge
apcupsd_status_slave{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_slave_down Slave not responding.
# TYPE apcupsd_status_slave_down gauge
apcupsd_status_slave_down{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_on_battery_message_sent Set when UPS_ONBATT message is sent.
# TYPE apcupsd_status_on_battery_message_sent gauge
apcupsd_status_on_battery_message_sent{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_fast_poll Set on power failure to poll faster.
# TYPE apcupsd_status_fast_poll gauge
apcupsd_status_fast_poll{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_shutdown_load Set when BatLoad <= percent.
# TYPE apcupsd_status_shutdown_load gauge
apcupsd_status_shutdown_load{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_shutdown_time Set when time on batts > maxtime.
# TYPE apcupsd_status_shutdown_time gauge
apcupsd_status_shutdown_time{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_shutdown_time_left Set when TimeLeft <= runtime.
# TYPE apcupsd_status_shutdown_time_left gauge
apcupsd_status_shutdown_time_left{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_emergency_shutdown Set when battery power has failed.
# TYPE apcupsd_status_emergency_shutdown gauge
apcupsd_status_emergency_shutdown{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_remote_shutdown Set when remote shutdown.
# TYPE apcupsd_status_remote_shutdown gauge
apcupsd_status_remote_shutdown{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_plugged_in Set if computer is plugged into UPS.
# TYPE apcupsd_status_plugged_in gauge
apcupsd_status_plugged_in{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_battery_present Indicates if battery is connected.
# TYPE apcupsd_status_battery_present gauge
apcupsd_status_battery_present{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_wakeup_mode In wakeup mode (typically lasts < 2s).
# TYPE apcupsd_status_wakeup_mode gauge
apcupsd_status_wakeup_mode{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bypass_mode_from_internal_fault In bypass mode due to internal fault.
# TYPE apcupsd_status_bypass_mode_from_internal_fault gauge
apcupsd_status_bypass_mode_from_internal_fault{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_entering_bypass_mode_from_command Going to bypass mode due to command.
# TYPE apcupsd_status_entering_bypass_mode_from_command gauge
apcupsd_status_entering_bypass_mode_from_command{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_in_bypass_mode_from_command In bypass mode due to command.
# TYPE apcupsd_status_in_bypass_mode_from_command gauge
apcupsd_status_in_bypass_mode_from_command{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_leaving_bypass_mode Returning from bypass mode.
# TYPE apcupsd_status_leaving_bypass_mode gauge
apcupsd_status_leaving_bypass_mode{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_in_bypass_mode_from_manual_control In bypass mode due to manual bypass control.
# TYPE apcupsd_status_in_bypass_mode_from_manual_control gauge
apcupsd_status_in_bypass_mode_from_manual_control{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_ready_power_load_on_command Ready to power load on user command.
# TYPE apcupsd_status_ready_power_load_on_command gauge
apcupsd_status_ready_power_load_on_command{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_ready_power_load_on_command_or_line Ready to power load on user command or return of line power.
# TYPE apcupsd_status_ready_power_load_on_command_or_line gauge
apcupsd_status_ready_power_load_on_command_or_line{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bypass_mode_from_electronics_fan_failure Fan failure in electronics, UPS in bypass.
# TYPE apcupsd_status_bypass_mode_from_electronics_fan_failure gauge
apcupsd_status_bypass_mode_from_electronics_fan_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_isolation_unit_fan_failure Fan failure in isolation unit.
# TYPE apcupsd_status_isolation_unit_fan_failure gauge
apcupsd_status_isolation_unit_fan_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bypass_supply_failure Bypass supply failure.
# TYPE apcupsd_status_bypass_supply_failure gauge
apcupsd_status_bypass_supply_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bypass_mode_from_output_voltage_select_failure Output voltage select failure, UPS in bypass.
# TYPE apcupsd_status_bypass_mode_from_output_voltage_select_failure gauge
apcupsd_status_bypass_mode_from_output_voltage_select_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bypass_mode_from_dc_imbalance DC imbalance, UPS in bypass.
# TYPE apcupsd_status_bypass_mode_from_dc_imbalance gauge
apcupsd_status_bypass_mode_from_dc_imbalance{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_battery_disconnected Battery is disconnected.
# TYPE apcupsd_status_battery_disconnected gauge
apcupsd_status_battery_disconnected{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_relay_fault_smarttrim_or_smartboost Relay fault in SmartTrim or SmartBoost.
# TYPE apcupsd_status_relay_fault_smarttrim_or_smartboost gauge
apcupsd_status_relay_fault_smarttrim_or_smartboost{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bad_output_voltage Bad output voltage.
# TYPE apcupsd_status_bad_output_voltage gauge
apcupsd_status_bad_output_voltage{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_output_unpowered_from_low_battery_shutdown Output unpowered due to shutdown by low battery.
# TYPE apcupsd_status_output_unpowered_from_low_battery_shutdown gauge
apcupsd_status_output_unpowered_from_low_battery_shutdown{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_cannot_transfer_to_battery_due_to_overload Unable to transfer to battery due to overload.
# TYPE apcupsd_status_cannot_transfer_to_battery_due_to_overload gauge
apcupsd_status_cannot_transfer_to_battery_due_to_overload{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_ups_off_from_main_relay_failure Main relay malfunction - UPS turned off.
# TYPE apcupsd_status_ups_off_from_main_relay_failure gauge
apcupsd_status_ups_off_from_main_relay_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_sleep_mode_from_command In sleep mode from @ command (maybe others).
# TYPE apcupsd_status_sleep_mode_from_command gauge
apcupsd_status_sleep_mode_from_command{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_shutdown_mode_from_command In shutdown mode from S command.
# TYPE apcupsd_status_shutdown_mode_from_command gauge
apcupsd_status_shutdown_mode_from_command{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_battery_charger_failure Battery charger failure.
# TYPE apcupsd_status_battery_charger_failure gauge
apcupsd_status_battery_charger_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_bypass_relay_failure Bypass relay malfunction.
# TYPE apcupsd_status_bypass_relay_failure gauge
apcupsd_status_bypass_relay_failure{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_status_operating_temperature_exceeded Normal operating temperature exceeded.
# TYPE apcupsd_status_operating_temperature_exceeded gauge
apcupsd_status_operating_temperature_exceeded{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 0
# HELP apcupsd_battery_last_replacement_timestamp_seconds Date battery last replaced.
# TYPE apcupsd_battery_last_replacement_timestamp_seconds gauge
apcupsd_battery_last_replacement_timestamp_seconds{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 901324800
# HELP apcupsd_battery_nominal_output_volts Nominal output voltage to supply when on battery power.
# TYPE apcupsd_battery_nominal_output_volts gauge
apcupsd_battery_nominal_output_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 230
# HELP apcupsd_battery_nominal_volts Nominal battery voltage.
# TYPE apcupsd_battery_nominal_volts gauge
apcupsd_battery_nominal_volts{ups_name="UPS_IDEN",model="BACK-UPS PRO 420",serial_number="GB1234123412"} 12
